# corncobs

./: Cargo.toml  README.md  pyproject.toml  tbump.toml
.github/workflows/: build.yml
python/corncobs/: __init__.py  __main__.py
src/: lib.rs
stubs/cobs/: cobs.pyi
stubs/corncobs/: _cobs.pyi
tests/: test_cobs.py
tests/benchmarks/: bench_encode_decode.py
