[package]
name = "corncobs"
description = "Python interface to the corncobs Rust library to implement COBS (Consistent Overhead Byte Stuffing) encoding"
repository = "https://github.com/ntamas/corncobs"
version = "1.0.2"
edition = "2024"
exclude = ["/.github", "/stubs/cobs"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "corncobs"
crate-type = ["cdylib"]

[dependencies]
corncobs = "0.1.4"
pyo3 = { version = "0.27.1", features = ["abi3-py310"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
